--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main" id="main">
         <header class="header text-center">
             <h1 class="header__title" id="title">James "The Amazing" Randi</h1>
-            <p class="header__subtitle">Tireless challenger of paranormal claims</p>
+            <p class="header__subtitle">Tireless challenger of paranormal claims.</p>
             <div id="img-div">
                 <figure class="header__figure">
                     <img id="image" src="./randi.jpg" alt="Preferred official head-shot of James Randi" width="1099"
